css/resume.css
@import url(http://fonts.googleapis.com/css?family=Droid+Serif:300,900);

body {
  font-family: 'Droid Serif', times, serif;
  font-weight: 300;
  font-size: 14pt;
  line-height: 1.3em;
}

div#body {
  width: 10in;
  margin: 0 auto;
}

div.header {
  text-align: center;
  margin-bottom: -1em;
}

div#printheader {
  display: none;
}

span.name {
  text-transform: uppercase;
  font-weight: 900;
  font-size: 22pt;
}

div.section {
  margin: -0.8em 0 2em 0;
}

p.section-heading {
  text-transform: uppercase;
  font-weight: 900;
  font-size: 16pt;
}

ul {
  margin-top: 0;
  margin-bottom: 0;
}

div.job {
  font-size: 16pt;
  margin: 1em 0;
}

div.job p {
  margin: 0.2em 0;
}

div.job p.job-title {
  text-transform: uppercase;
  display: inline;
}

div.job p.employment-dates {
  display: inline;
  float: right;
}

div.job p.employer {
}

div.job p.job-description {
  margin: 0.6em 0;
}

div.job ul {
  font-size: 12pt;
}

